--- a/select-section.html
+++ b/select-section.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Your TA Section - Economics Games</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         .banner-container {
             position: relative;
@@ -146,16 +146,65 @@
         </div>
     </footer>
 
-    <!-- Supabase Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.38.4/dist/umd/supabase.min.js"></script>
+    <!-- Local Storage Fallback -->
     <script>
-        // Hardcoded Supabase credentials for now (will be replaced by GitHub Actions in production)
-        const supabaseUrl = 'https://clyyjcjwcbbmdlccmtaa.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNseXlqY2p3Y2JibWRsY2NtdGFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ4NTk3NDQsImV4cCI6MjA2MDQzNTc0NH0.ADHB7McgJ29pMWmLgjMZYiU9Tnk2ZodKvf4PBndmxbQ';
+        // Disable Supabase completely and use localStorage fallback
+        console.log('Using localStorage fallback instead of Supabase');
 
-        // Initialize Supabase client
-        window.supabase = supabase.createClient(supabaseUrl, supabaseKey);
-        console.log('Supabase client initialized');
+        // Create a mock Supabase client that always returns errors
+        window.supabase = {
+            from: (table) => {
+                console.log(`Mock Supabase: Attempted to access table ${table}`);
+                return {
+                    select: (fields) => {
+                        console.log(`Mock Supabase: Attempted to select ${fields || '*'} from ${table}`);
+                        return {
+                            eq: (field, value) => {
+                                console.log(`Mock Supabase: Attempted to filter ${field}=${value}`);
+                                return {
+                                    single: () => ({ data: null, error: { message: 'Using localStorage fallback' } })
+                                };
+                            },
+                            order: (field, direction) => {
+                                console.log(`Mock Supabase: Attempted to order by ${field} ${direction || 'asc'}`);
+                                return { data: null, error: { message: 'Using localStorage fallback' } };
+                            },
+                            single: () => ({ data: null, error: { message: 'Using localStorage fallback' } })
+                        };
+                    },
+                    insert: (data) => {
+                        console.log(`Mock Supabase: Attempted to insert data into ${table}`, data);
+                        return {
+                            select: () => ({
+                                single: () => ({ data: null, error: { message: 'Using localStorage fallback' } })
+                            })
+                        };
+                    },
+                    update: (data) => {
+                        console.log(`Mock Supabase: Attempted to update data in ${table}`, data);
+                        return {
+                            eq: (field, value) => {
+                                console.log(`Mock Supabase: Attempted to filter ${field}=${value}`);
+                                return {
+                                    select: () => ({
+                                        single: () => ({ data: null, error: { message: 'Using localStorage fallback' } })
+                                    })
+                                };
+                            }
+                        };
+                    },
+                    delete: () => {
+                        console.log(`Mock Supabase: Attempted to delete from ${table}`);
+                        return {
+                            eq: (field, value) => {
+                                console.log(`Mock Supabase: Attempted to filter ${field}=${value}`);
+                                return { data: null, error: { message: 'Using localStorage fallback' } };
+                            }
+                        };
+                    }
+                };
+            }
+        };
     </script>
 
     <!-- Firebase Scripts (for backward compatibility) -->
