Add Supabase integration for Investment Odyssey game

--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -427,11 +427,18 @@
     <!-- Score Manager -->
     <script src="js/local-storage-scores.js"></script>
 
+    <!-- Supabase Scripts -->
+    <script src="../../js/supabase-init.js"></script>
+    <script src="../../js/supabase-auth.js"></script>
+
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/service-fallback.js"></script>
 
+    <!-- Supabase Leaderboard Service -->
+    <script src="js/supabase-leaderboard.js?v=1"></script>
+
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=7"></script>
+    <script src="js/leaderboard.js?v=8"></script>
 
     <!-- Other Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
