--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -667,6 +667,16 @@
     <!-- Score Manager -->
     <script src="js/local-storage-scores.js"></script>
 
+    <!-- Supabase Scripts -->
+    <script src="../../js/supabase-init.js"></script>
+    <script src="../../js/supabase-auth.js"></script>
+
+    <!-- Section Selector -->
+    <script src="js/section-selector.js?v=1"></script>
+
+    <!-- Supabase Leaderboard Service -->
+    <script src="js/supabase-leaderboard.js?v=1"></script>
+
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=12"></script>
     <script src="js/game-ui.js?v=11"></script>
