--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -592,8 +592,9 @@
     <script src="js/local-storage-scores.js"></script>
 
     <!-- Supabase Scripts -->
-    <script src="../../js/supabase-init.js"></script>
-    <script src="../../js/supabase-auth.js"></script>
+    <script src="../../js/env.js?v=2"></script>
+    <script src="../../js/supabase-init.js?v=2"></script>
+    <script src="../../js/supabase-auth.js?v=1"></script>
 
     <!-- Section Selector -->
     <script src="js/section-selector.js?v=1"></script>
