--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -592,8 +592,8 @@
     <script src="js/local-storage-scores.js"></script>
 
     <!-- Supabase Scripts -->
-    <script src="../../js/env.js?v=2"></script>
-    <script src="../../js/supabase-init.js?v=2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="js/supabase.js?v=1"></script>
     <script src="../../js/supabase-auth.js?v=1"></script>
 
     <!-- Section Selector -->
