Add supabase-scores.js to save scores to Supabase

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -675,8 +675,9 @@
     <!-- Section Selector -->
     <script src="js/section-selector.js?v=1"></script>
 
-    <!-- Supabase Leaderboard Service -->
+    <!-- Supabase Services -->
     <script src="js/supabase-leaderboard.js?v=1"></script>
+    <script src="js/supabase-scores.js?v=1"></script>
 
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=12"></script>
