--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -435,8 +435,9 @@
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/service-fallback.js"></script>
 
-    <!-- Supabase Leaderboard Service -->
+    <!-- Supabase Services -->
     <script src="js/supabase-leaderboard.js?v=1"></script>
+    <script src="js/supabase-scores.js?v=1"></script>
 
     <!-- Leaderboard Script -->
     <script src="js/leaderboard.js?v=8"></script>
