--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -412,39 +412,33 @@
         </div>
     </div>
 
-    <!-- Firebase Scripts -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="../../js/firebase-auth-config.js?v=2"></script>
+    <!-- jQuery and Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-    <!-- Authentication Scripts -->
-    <script src="../../js/auth.js"></script>
+    <!-- Supabase Scripts - Load First -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="js/supabase.js?v=2"></script>
+    <script src="../../js/supabase-auth.js?v=2"></script>
+
+    <!-- Firebase Scripts - Load After Supabase -->
+    <script src="../../js/firebase-auth-config.js?v=3"></script>
+
+    <!-- Authentication Scripts - Load After Supabase -->
+    <script src="../../js/auth.js?v=2"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js"></script>
-
-    <!-- Score Manager -->
-    <script src="js/local-storage-scores.js"></script>
-
-    <!-- Supabase Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=1"></script>
-    <script src="../../js/supabase-auth.js?v=1"></script>
-
-    <!-- Service Fallback to ensure Service is available -->
-    <script src="js/service-fallback.js"></script>
+    <script src="js/header-auth.js?v=2"></script>
 
     <!-- Supabase Services -->
-    <script src="js/supabase-leaderboard.js?v=1"></script>
-    <script src="js/supabase-scores.js?v=1"></script>
+    <script src="js/supabase-leaderboard.js?v=2"></script>
+    <script src="js/supabase-scores.js?v=2"></script>
+
+    <!-- Score Manager -->
+    <script src="js/local-storage-scores.js?v=2"></script>
 
     <!-- Leaderboard Script -->
     <script src="js/leaderboard.js?v=8"></script>
-
-    <!-- Other Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
