--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -536,21 +536,20 @@
         </div>
     </footer>
 
-    <!-- Firebase Scripts -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="../../js/firebase-auth-config.js?v=2"></script>
-
-    <!-- Authentication Scripts -->
-    <script src="../../js/auth.js"></script>
-
-    <!-- Header Authentication Script -->
-    <script src="js/header-auth.js"></script>
-
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- jQuery and Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+    <!-- Supabase Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="js/supabase.js?v=3"></script>
+    <script src="../../js/supabase-auth.js?v=3"></script>
+
+    <!-- Authentication Scripts -->
+    <script src="../../js/auth.js?v=3"></script>
+
+    <!-- Header Authentication Script -->
+    <script src="js/header-auth.js?v=3"></script>
 </body>
 </html>
