--- a/activities/investment-odyssey/statistics.html
+++ b/activities/investment-odyssey/statistics.html
@@ -321,27 +321,27 @@
         </div>
     </div>
 
-    <!-- Firebase Scripts -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="../../js/firebase-auth-config.js?v=2"></script>
-
-    <!-- Authentication Scripts -->
-    <script src="../../js/auth.js"></script>
-
-    <!-- Score Manager -->
-    <script src="js/local-storage-scores.js"></script>
-
-    <!-- Service Fallback to ensure Service is available -->
-    <script src="js/statistics-fallback.js"></script>
-
-    <!-- Statistics Script -->
-    <script src="js/statistics.js?v=2"></script>
-
-    <!-- Other Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- jQuery and Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+    <!-- Supabase Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="js/supabase.js?v=3"></script>
+    <script src="../../js/supabase-auth.js?v=3"></script>
+
+    <!-- Authentication Scripts -->
+    <script src="../../js/auth.js?v=3"></script>
+
+    <!-- Score Manager -->
+    <script src="js/local-storage-scores.js?v=3"></script>
+
+    <!-- Supabase Services -->
+    <script src="js/supabase-leaderboard.js?v=3"></script>
+    <script src="js/supabase-scores.js?v=3"></script>
+
+    <!-- Statistics Script -->
+    <script src="js/statistics.js?v=3"></script>
 </body>
 </html>
