--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -411,20 +411,17 @@
         </div>
     </div>
 
-    <!-- Firebase Scripts -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="../../js/firebase-auth-config.js"></script>
-
-    <!-- Service Bridge to ensure Service is available -->
-    <script src="js/service-bridge.js"></script>
-
-    <!-- TA Controls Script -->
-    <script src="js/ta-controls.js"></script>
-
-    <!-- Other Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- jQuery and Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+    <!-- Supabase Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+    <script src="js/supabase.js?v=3"></script>
+    <script src="../../js/supabase-auth.js?v=3"></script>
+
+    <!-- TA Controls Script -->
+    <script src="js/ta-controls.js?v=3"></script>
 </body>
 </html>
