--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -417,16 +417,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
-    <!-- Supabase Scripts - Load First -->
+    <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=2"></script>
-    <script src="../../js/supabase-auth.js?v=2"></script>
+    <script src="js/supabase.js?v=3"></script>
+    <script src="../../js/supabase-auth.js?v=3"></script>
 
-    <!-- Firebase Scripts - Load After Supabase -->
-    <script src="../../js/firebase-auth-config.js?v=3"></script>
-
-    <!-- Authentication Scripts - Load After Supabase -->
-    <script src="../../js/auth.js?v=2"></script>
+    <!-- Authentication Scripts -->
+    <script src="../../js/auth.js?v=3"></script>
 
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js?v=2"></script>
