Create local supabase-auth.js and update all HTML files to use it

--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -419,14 +419,11 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=3"></script>
-    <script src="../../js/supabase-auth.js?v=3"></script>
-
-    <!-- Authentication Scripts -->
-    <script src="../../js/auth.js?v=3"></script>
+    <script src="js/supabase.js?v=4"></script>
+    <script src="js/supabase-auth.js?v=4"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js?v=2"></script>
+    <script src="js/header-auth.js?v=4"></script>
 
     <!-- Supabase Services -->
     <script src="js/supabase-leaderboard.js?v=2"></script>
