--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -543,13 +543,10 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=3"></script>
-    <script src="../../js/supabase-auth.js?v=3"></script>
-
-    <!-- Authentication Scripts -->
-    <script src="../../js/auth.js?v=3"></script>
+    <script src="js/supabase.js?v=4"></script>
+    <script src="js/supabase-auth.js?v=4"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js?v=3"></script>
+    <script src="js/header-auth.js?v=4"></script>
 </body>
 </html>
