--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -418,8 +418,8 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=3"></script>
-    <script src="../../js/supabase-auth.js?v=3"></script>
+    <script src="js/supabase.js?v=4"></script>
+    <script src="js/supabase-auth.js?v=4"></script>
 
     <!-- TA Controls Script -->
     <script src="js/ta-controls.js?v=3"></script>
