Fix Investment Odyssey Supabase integration and section display

--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -663,26 +663,25 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=4"></script>
-    <script src="js/supabase-auth.js?v=4"></script>
+    <script src="js/supabase.js?v=5"></script>
+    <script src="js/supabase-auth.js?v=5"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js?v=4"></script>
+    <script src="js/header-auth.js?v=5"></script>
 
     <!-- Section Selector -->
-    <script src="js/section-selector.js?v=2"></script>
+    <script src="js/section-selector.js?v=3"></script>
 
     <!-- Supabase Services -->
-    <script src="js/supabase-leaderboard.js?v=2"></script>
-    <script src="js/supabase-scores.js?v=2"></script>
+    <script src="js/supabase-leaderboard.js?v=3"></script>
+    <script src="js/supabase-scores.js?v=3"></script>
 
-    <!-- Score Manager -->
-    <script src="js/local-storage-scores.js?v=2"></script>
+    <!-- No longer using local storage scores -->
 
     <!-- Game Scripts -->
-    <script src="js/game-core.js?v=12"></script>
-    <script src="js/game-ui.js?v=11"></script>
-    <script src="js/game-trading.js?v=11"></script>
-    <script src="js/class-game.js?v=4"></script>
+    <script src="js/game-core.js?v=13"></script>
+    <script src="js/game-ui.js?v=12"></script>
+    <script src="js/game-trading.js?v=12"></script>
+    <script src="js/class-game.js?v=5"></script>
 </body>
 </html>
