--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -419,20 +419,19 @@
 
     <!-- Supabase Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
-    <script src="js/supabase.js?v=4"></script>
-    <script src="js/supabase-auth.js?v=4"></script>
+    <script src="js/supabase.js?v=5"></script>
+    <script src="js/supabase-auth.js?v=5"></script>
 
     <!-- Header Authentication Script -->
-    <script src="js/header-auth.js?v=4"></script>
+    <script src="js/header-auth.js?v=5"></script>
 
     <!-- Supabase Services -->
-    <script src="js/supabase-leaderboard.js?v=2"></script>
-    <script src="js/supabase-scores.js?v=2"></script>
+    <script src="js/supabase-leaderboard.js?v=3"></script>
+    <script src="js/supabase-scores.js?v=3"></script>
 
-    <!-- Score Manager -->
-    <script src="js/local-storage-scores.js?v=2"></script>
+    <!-- No longer using local storage scores -->
 
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=8"></script>
+    <script src="js/leaderboard.js?v=9"></script>
 </body>
 </html>
