Fix TA section display and simplify login interface

--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -127,6 +127,11 @@
 
     <div class="container">
 
+        <!-- Section Selection Status -->
+        <div class="row mb-3" id="current-section-display">
+            <!-- Current section will be displayed here by section-selector.js -->
+        </div>
+
         <!-- Asset Price Ticker -->
         <div class="row mb-3">
             <div class="col-12">
