--- a/games.html
+++ b/games.html
@@ -138,7 +138,7 @@
                             <!-- Authentication Form -->
                             <div id="auth-form">
                                 <div class="alert alert-info">
-                                    <p class="mb-0"><strong>Students:</strong> Sign in or register to access the games. You'll be able to select your TA section after signing in.</p>
+                                    <p class="mb-0"><strong>Students:</strong> Sign in to access the games. You'll be able to select your TA section after signing in.</p>
                                 </div>
                                 <div class="form-group">
                                     <label for="student-name">Your Name</label>
@@ -147,11 +147,10 @@
                                 <div class="form-group">
                                     <label for="student-passcode">Passcode</label>
                                     <input type="password" id="student-passcode" class="form-control" placeholder="Enter your passcode">
-                                    <small class="form-text text-muted">If registering, create a passcode you'll remember.</small>
+                                    <small class="form-text text-muted">Enter the passcode provided by your instructor.</small>
                                 </div>
                                 <div class="d-flex justify-content-between">
                                     <button id="login-btn" class="btn btn-primary">Sign In</button>
-                                    <button id="register-btn" class="btn btn-success">Register</button>
                                     <button id="guest-btn" class="btn btn-secondary">Continue as Guest</button>
                                 </div>
                                 <div id="auth-error" class="text-danger mt-2"></div>
