Fix TA section change logout issue: Remove blue change TA section button for logged-in users and prevent page reload when changing sections

--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -586,11 +586,14 @@
     <script src="js/supabase.js?v=5"></script>
     <script src="js/supabase-auth.js?v=5"></script>
 
+    <!-- Service Adapter -->
+    <script src="js/service-adapter.js?v=1"></script>
+
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js?v=5"></script>
 
     <!-- Section Selector -->
-    <script src="js/section-selector.js?v=3"></script>
+    <script src="js/section-selector.js?v=4"></script>
 
     <!-- Supabase Services -->
     <script src="js/supabase-leaderboard.js?v=3"></script>
