--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -128,6 +128,13 @@
     <div class="container">
 
         <!-- Section Selection Status -->
+        <!-- Section Selection Link -->
+        <div class="row mb-3">
+            <div class="col-12">
+                <a href="select-section.html" class="btn btn-outline-primary">Select or Change TA Section</a>
+            </div>
+        </div>
+
         <div class="row mb-3" id="current-section-display">
             <!-- Current section will be displayed here by section-selector.js -->
         </div>
