--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -103,6 +103,8 @@
                     </div>
                     <h1 class="activity-title">Investment Odyssey</h1>
                     <p class="activity-date">Leaderboard - See how your investment skills compare to others!</p>
+                    <!-- Change Name Button -->
+                    <button id="change-name-btn" class="btn btn-sm btn-outline-light mt-2">Change Display Name</button>
                 </div>
             </div>
         </div>
@@ -431,7 +433,34 @@
 
     <!-- No longer using local storage scores -->
 
+    <!-- Name Change Modal -->
+    <div class="modal fade" id="nameChangeModal" tabindex="-1" role="dialog" aria-labelledby="nameChangeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="nameChangeModalLabel">Change Your Display Name</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Enter the name you'd like to display on the leaderboard. Only your highest score will be shown.</p>
+                    <form id="nameChangeForm">
+                        <div class="form-group">
+                            <label for="displayName">Display Name:</label>
+                            <input type="text" class="form-control" id="displayName" placeholder="Enter your name" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveNameBtn">Save Name</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Leaderboard Script -->
-    <script src="js/leaderboard.js?v=10"></script>
+    <script src="js/leaderboard.js?v=11"></script>
 </body>
 </html>
