--- a/games.html
+++ b/games.html
@@ -130,6 +130,7 @@
                             <div id="auth-status" class="alert alert-success mb-3 d-none">
                                 <p>Signed in as: <span id="current-user-name">Student Name</span></p>
                                 <div class="d-flex justify-content-between align-items-center mt-2">
+                                    <button id="change-name-btn" class="btn btn-sm btn-outline-primary mr-2">Change Display Name</button>
                                     <button id="logout-btn" class="btn btn-sm btn-outline-secondary">Logout</button>
                                 </div>
                             </div>
@@ -142,6 +143,11 @@
                                 <div class="form-group">
                                     <label for="student-name">Your Name</label>
                                     <input type="text" id="student-name" class="form-control" placeholder="Enter your name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="display-name">Display Name (for Leaderboard)</label>
+                                    <input type="text" id="display-name" class="form-control" placeholder="Enter your display name">
+                                    <small class="form-text text-muted">This name will be shown on the leaderboard. Only your highest score will be displayed.</small>
                                 </div>
                                 <div class="form-group">
                                     <label for="student-passcode">Passcode</label>
@@ -205,6 +211,33 @@
     <!-- Authentication Scripts -->
     <script src="js/supabase-auth.js"></script>
     <script src="js/games.js"></script>
+
+    <!-- Name Change Modal -->
+    <div class="modal fade" id="nameChangeModal" tabindex="-1" role="dialog" aria-labelledby="nameChangeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="nameChangeModalLabel">Choose Your Display Name</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Enter the name you'd like to display on the leaderboard. Only your highest score will be shown.</p>
+                    <form id="nameChangeForm">
+                        <div class="form-group">
+                            <label for="displayName">Display Name:</label>
+                            <input type="text" class="form-control" id="displayName" placeholder="Enter your name" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="saveNameBtn">Save Name</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
