--- a/games.html
+++ b/games.html
@@ -141,8 +141,8 @@
                                     <p class="mb-0"><strong>Students:</strong> Sign in to access the games. You'll be able to select your TA section after signing in.</p>
                                 </div>
                                 <div class="form-group">
-                                    <label for="student-name">Your Name</label>
-                                    <input type="text" id="student-name" class="form-control" placeholder="Enter your name">
+                                    <label for="student-name">User/Net ID</label>
+                                    <input type="text" id="student-name" class="form-control" placeholder="Enter your User/Net ID">
                                 </div>
                                 <div class="form-group">
                                     <label for="display-name">Display Name (for Leaderboard)</label>
@@ -159,12 +159,6 @@
                                     <button id="guest-btn" class="btn btn-secondary">Continue as Guest</button>
                                 </div>
                                 <div id="auth-error" class="text-danger mt-2"></div>
-                                <hr>
-                                <div class="mt-3">
-                                    <h5>Teaching Assistants</h5>
-                                    <p>TAs should sign in using the TA portal:</p>
-                                    <a href="ta-admin.html" class="btn btn-outline-primary">TA Sign In Portal</a>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -184,7 +178,7 @@
                             <h5 class="card-title">Investment Odyssey</h5>
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
                             <div class="mt-3">
-                                <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Learn About Investment Odyssey</a>
+                                <a href="activities/investment-odyssey/index.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
                             </div>
                         </div>
                     </div>
