--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -174,11 +174,10 @@
             </div>
         </div>
 
-        <!-- Market Data & Game Controls - Side by Side on Large Screens -->
+        <!-- Market Data - Full Width -->
         <div class="row mb-3">
-            <!-- Market Data - Left Side on Large Screens, Full Width on Small Screens -->
-            <div class="col-lg-6 mb-3 mb-lg-0">
-                <div class="card market-data-card h-100">
+            <div class="col-12">
+                <div class="card market-data-card">
                     <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center" style="padding: 1rem; border-bottom: 3px solid #dc3545;">
                         <div class="d-flex align-items-center">
                             <i class="fas fa-chart-line mr-2" style="font-size: 1.8rem;"></i>
@@ -211,10 +210,16 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Game Controls & Trading - Right Side on Large Screens, Full Width on Small Screens -->
-            <div class="col-lg-6">
-                <div class="card h-100">
+
+
+        <!-- Market Data & Portfolio container removed to eliminate redundancy -->
+
+        <!-- Game Controls & Trading -->
+        <div class="row mb-3">
+            <div class="col-12">
+                <div class="card">
                     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                         <h3 class="mb-0" style="font-size: 1.5rem;">Game Controls & Trading</h3>
                     </div>
@@ -436,11 +441,10 @@
             </div>
         </div>
 
-        <!-- Portfolio Performance and Comparative Asset Performance - Side by Side on Large Screens -->
+        <!-- Portfolio Performance -->
         <div class="row mt-4">
-            <!-- Portfolio Performance - Left Side on Large Screens, Full Width on Small Screens -->
-            <div class="col-lg-6 mb-4 mb-lg-0">
-                <div class="card h-100">
+            <div class="col-12">
+                <div class="card">
                     <div class="card-header bg-warning text-white">
                         <h3>Portfolio Performance</h3>
                     </div>
@@ -457,10 +461,14 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Comparative Asset Performance - Right Side on Large Screens, Full Width on Small Screens -->
-            <div class="col-lg-6">
-                <div class="card h-100">
+
+
+        <!-- Comparative Asset Performance -->
+        <div class="row mt-4">
+            <div class="col-12">
+                <div class="card">
                     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                         <h3>Comparative Asset Performance</h3>
                     </div>
