--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -74,12 +74,7 @@
             margin-left: auto;
         }
 
-        /* Set max-width for extra large screens to prevent excessive stretching */
-        @media (min-width: 1600px) {
-            .container-fluid-xl {
-                max-width: 1800px;
-            }
-        }
+        /* No max-width to allow true full-width layout */
 
         /* Card height matching for side-by-side containers */
         .card-equal-height {
@@ -128,7 +123,7 @@
         <div class="banner-container">
             <img src="../../images/banner15.png" alt="Investment Odyssey Banner" class="banner-image">
             <div class="banner-overlay">
-                <div class="container mx-auto">
+                <div class="container-fluid-xl">
                     <div class="nav-links">
                         <div class="nav-links-left">
                             <a href="../../index.html" class="nav-link">Home</a>
